<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
        android:background="@color/teal_200">

        <TextView
            android:id="@+id/enterNames"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/names"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:fontFamily="casual"
            android:gravity="center"
            android:textStyle="bold"/>


        <EditText
            android:id="@+id/playerOneName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="35dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@color/white"
            android:gravity="center"
            android:hint="@string/playerOneNameHere"
            android:inputType="text"
            android:text=""
            android:textStyle="italic"
            android:fontFamily="casual"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <EditText
            android:id="@+id/playerTwoName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="35dp"
            android:layout_marginTop="35dp"
            android:inputType="text"
            android:layout_weight="1"
            android:hint="@string/playerTwoNameHere"
            android:gravity="center"
            android:background="@color/white"
            android:text=""
            android:textStyle="italic"
            android:fontFamily="casual"
            android:autofillHints="" />

        <Button
            android:id="@+id/saveNames"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="35dp"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="35dp"
            android:gravity="center"
            android:text="@string/saveName"
            android:textSize="30sp"
            android:textColor="@color/teal_200"
            android:fontFamily="casual"
            android:layout_weight="0"
            android:layout_gravity="center"
            android:backgroundTint="@color/black"/>

</LinearLayout>